compiler/testData/diagnostics/tests/nullableTypes/nullableArgumentForIn.fir.kt
// RUN_PIPELINE_TILL: FRONTEND
fun test(x: Int?) {
     <!ARGUMENT_TYPE_MISMATCH!>x<!> in 1..2
}